    storageType and URI correctly.  (Anu Engineer via szetszwo)

    HDFS-9438. TestPipelinesFailover assumes Linux ifconfig.
    (John Zhuge via Yongjun Zhang)

    HDFS-8512. WebHDFS : GETFILESTATUS should return LocatedBlock with storage
    type info. (xyao)

    HDFS-9269. Update the documentation and wrapper for fuse-dfs. 
    (Wei-Chiu Chuang via zhz)

  OPTIMIZATIONS

    HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
    DFSOutputStream#writeChunk (cmccabe)

    HDFS-7433. Optimize performance of DatanodeManager's node map.
    (daryn via kihwal)

    HDFS-8792. BlockManager#postponedMisreplicatedBlocks should use a
    LightWeightHashSet to save memory (Yi Liu via Colin P. McCabe)

    HDFS-8845. DiskChecker should not traverse the entire tree (Chang Li via
    Colin P. McCabe)

    HDFS-8862. BlockManager#excessReplicateMap should use a HashMap. (yliu)

    HDFS-8929. Add a metric to expose the timestamp of the last journal
    (surendra singh lilhore via vinayakumarb)

    HDFS-8829. Make SO_RCVBUF and SO_SNDBUF size configurable for
    DataTransferProtocol sockets and allow configuring auto-tuning (He Tianyi
    via Colin P. McCabe)

    HDFS-9139. Enable parallel JUnit tests for HDFS Pre-commit
    (Chris Nauroth and Vinayakumar B via vinayakumarb)

    HDFS-9145. Tracking methods that hold FSNamesytemLock for too long.
    (Mingliang Liu via wheat9)

    HDFS-9167. Update pom.xml in other modules to depend on hdfs-client instead
    of hdfs. (Mingliang Liu via wheat9)

    HDFS-9253. Refactor tests of libhdfs into a directory. (wheat9)

    HDFS-9280. Document NFS gateway export point parameter. (Xiao Chen via zhz)

    HDFS-9297. Update TestBlockMissingException to use corruptBlockOnDataNodesByDeletingBlockFile().
    (Tony Wu via lei)

    HDFS-9168. Move client side unit test to hadoop-hdfs-client. (wheat9)

    HDFS-9312. Fix TestReplication to be FsDataset-agnostic. (lei)
