@@ -1704,6 +1704,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9269. Update the documentation and wrapper for fuse-dfs. 
     (Wei-Chiu Chuang via zhz)
 
+    HDFS-9485. Make BlockManager#removeFromExcessReplicateMap accept BlockInfo
+    instead of Block. (Mingliang Liu via jing9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
